Expand to a full statistics course toolkit; harden the web server
Feature expansion (all within the existing layered architecture):

stats layer:
- Decimal support: Dataset moves to double storage (accepts any Number);
  StreamAnalyzer keeps the original integer Lab 13 pipelines via an
  intStream() bridge, still pinned by the coursework regression tests
- Jarque-Bera normality test added to every summary (chi-square(2) p-value)
- Inference grows one-sample t, paired t, one-way ANOVA (F distribution)
  and chi-square goodness-of-fit/independence, with exact p-values via a
  new regularized incomplete gamma implementation
- New Bivariate class: Pearson r (+ p-value), Spearman rho with average
  ranks, least-squares regression with R-squared
- DescriptiveStatistics exposes percentile(), outliers() and sortedValues()

web layer (production hardening for local use):
- Virtual-thread-per-request executor, request/response time bounds
- 5 MB body cap (413) and 200k-value dataset cap
- Access logging via System.Logger, error boundary, graceful shutdown hook
- Security headers (CSP on the page, nosniff/no-referrer/no-store on all)
- /health endpoint with the manifest version
- /api/analyze?mu= one-sample t; /api/compare handles 2-4 datasets
  (Welch / paired+bivariate / ANOVA) with aligned bins, percentile grids
  and outlier lists per set; new /api/chisquare endpoint

frontend:
- Up to four datasets with per-set colors (palette CVD-validated)
- New views: scatter plot with regression line, ECDF overlay, normal Q-Q
  plot, frequency table (f/%/cumulative), chi-square card
- One-sample t, paired and ANOVA test cards with significance verdicts
- CSV column picker for multi-column uploads, z-score export,
  standalone HTML report download; outlier values listed in the table

cli: new --test-mean flag runs the one-sample t-test in the terminal

tests: 30 new (102 total) - t/F/chi-square p-values against classic table
critical values, ANOVA and paired t against hand computations